# expr_eval

./: CMakeLists.txt  README.md  evaluation_exception.h  expr_eval.cpp  expr_evalConfig.h  expr_evalConfig.h.in  expression.cpp  expression.h  expression_tokenizer.cpp  expression_tokenizer.h  parse_exception.h  precedence.cfg  shunting-yard.h  status.h  stdafx.cpp  string_helpers.cpp  string_helpers.h  targetver.h  unittest_expr_eval.cpp  value.cpp  value.h
googletest/Debug/: gtest_maind.lib
googletest/Release/: gtest_main.lib
